--- a/GestObjet/package.json
+++ b/GestObjet/package.json
@@ -54,11 +54,10 @@
     "@adonisjs/auth": "^9.4.0",
     "@adonisjs/core": "^6.18.0",
     "@adonisjs/cors": "^2.2.1",
-    "@adonisjs/lucid": "^21.6.1",
     "@adonisjs/session": "^7.6.0",
     "@vinejs/vine": "^3.0.1",
     "luxon": "^3.7.2",
-    "mysql2": "^3.15.3",
+    "mongoose": "^9.0.1",
     "reflect-metadata": "^0.2.2"
   },
   "hotHook": {
