--- a/gestobjetapp/pubspec.yaml
+++ b/gestobjetapp/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  mobile_scanner: ^7.1.4
   http: ^1.4.0
 
   # The following adds the Cupertino Icons font to your application.
